<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    >

    <TextView
        android:id="@+id/textgetstart"
        android:layout_width="335dp"
        android:layout_height="34dp"
        android:textSize="28dp"
        android:text="@string/welcome"
        android:textColor="@color/Neutralblack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="70dp"
        />
    <TextView
        android:id="@+id/textstart1"
        android:layout_width="335dp"
        android:layout_height="21dp"
        android:textSize="14dp"
        android:text="@string/textstart2"
        android:textColor="@color/Neutraldarkgrey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textgetstart"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="18dp"
        />


    <com.example.androidrawlabspace.rawlabspace.shared.ui.ReuseFormInput
        android:id="@+id/editEmail"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:textColor="@color/Neutraldarkgrey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="170.5dp"
        />


    <com.example.androidrawlabspace.rawlabspace.shared.ui.ReuseFormInput
        android:id="@+id/editPassword"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:textColor="@color/Neutraldarkgrey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="273.5dp"
        />
    
    <TextView
        android:layout_width="335dp"
        android:layout_height="16dp"
        android:text="@string/forgotPass"
        android:textAlignment="textEnd"
        android:textColor="@color/mediumgrey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editPassword"

        />


    

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLogin"
        android:layout_width="335dp"
        android:layout_height="40dp"
        android:text="Login"
        android:textColor="@color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editPassword"
        android:layout_marginTop="111.5dp"
        android:background="@drawable/bgndbutton"
        />

    <TextView
        android:id="@+id/idDont"
        android:layout_width="145dp"
        android:layout_height="16dp"
        android:textColor="@color/Neutraldarkgrey"
        android:text="@string/createacount"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="40dp"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin"
        android:layout_marginTop="164dp"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:id="@+id/createAkun"
        android:layout_width="100dp"
        android:layout_height="16dp"
        android:text="@string/create_akun"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin"
        android:layout_marginStart="220dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="164dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/primary"
        />



</androidx.constraintlayout.widget.ConstraintLayout>