<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_bg"
    >

    <ImageView
        android:id="@+id/rectangle"
        android:layout_width="65dp"
        android:layout_height="6dp"
        android:layout_marginLeft="155dp"
        android:layout_marginRight="155dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle"
        />

    <TextView
        android:id="@+id/selectAddress"
        android:layout_width="335dp"
        android:layout_height="30dp"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:textFontWeight="700"
        android:text="@string/selectAddress"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="34dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:lineHeight="18dp"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnsearch"
        android:layout_width="15.75dp"
        android:layout_height="15.75dp"
        android:textColor="@color/Neutraldarkgrey"
        android:padding="10dp"
        android:layout_marginRight="308.12dp"
        app:layout_constraintStart_toStartOf="@id/idedit"
        app:layout_constraintEnd_toEndOf="@id/idedit"
        app:layout_constraintTop_toTopOf="@id/idedit"
        android:layout_marginLeft="11.13dp"
        android:layout_marginTop="14.12dp"
        android:background="@drawable/btn_search"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/idedit"
        android:layout_width="335dp"
        android:layout_height="44dp"
        android:textColor="@color/Neutraldarkgrey"
        android:padding="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/selectAddress"
        android:layout_marginTop="35dp"
        android:background="@drawable/rectangle_form"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="140dp"
        android:background="@color/coloredittext1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/const3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toStartOf="@id/const2"
            app:layout_constraintEnd_toEndOf="@id/const2"
            app:layout_constraintTop_toTopOf="@id/const2"
            >

            <ImageView
                android:id="@+id/iconsearch_noresult"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="137dp"
                android:layout_marginLeft="137.5dp"
                android:layout_marginRight="137.5dp"
                android:layout_marginBottom="204dp"
                android:background="@drawable/search_noresult"
                />
            <TextView
                android:id="@+id/textnoresult"
                android:layout_width="335dp"
                android:layout_height="24dp"
                android:text="@string/noresult"
                android:textAlignment="center"
                android:textColor="@color/Neutralblack"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iconsearch_noresult"
                android:layout_marginTop="20dp"
                android:textSize="20dp"
                />
            <TextView
                android:id="@+id/textnoresult2"
                android:layout_width="335dp"
                android:layout_height="21dp"
                android:text="@string/noresult2"
                android:textAlignment="center"
                android:textColor="@color/Neutraldarkgrey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textnoresult"
                android:layout_marginTop="8dp"
                android:textSize="14dp"
                />



        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>